--- a/style.css
+++ b/style.css
@@ -64,7 +64,12 @@ body {
 
 /** HEADER */
 	#header {
-		border-bottom: 1px solid #333;
+		border-bottom: 1px solid #ababab;
+		border-left: 1px solid #ababab;
+		border-radius: 10px;
+		border-top-left-radius: 0;
+		border-bottom-right-radius: 0;
+		padding: 0 10px 15px;
 		margin: 1em 0 3em;
 		-webkit-flex: 0 1 100%;
 		-ms-flex: 0 1 100%;
@@ -72,18 +77,31 @@ body {
 	}
 
 	/** LOGO */
-		#logo { margin-bottom: 0; }
+		#logo {
+			float: left;
+			margin-bottom: 0;
+			width: 18vw;
+		}
 
 		#logo h1 a:link, #logo h1 a:visited, #logo h1 a:active {
+			font-family: 'Open Sans', sans-serif;
 			font-size: 2.4rem;
+			line-height: 1;
+			margin: 0;
+			padding: 0;
 			text-decoration: none;
 		}
 
 		#logo h1 a:hover { }
 
 		#logo h2 {
-			font-size: 1.8rem;
+			color: #ababab;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 1.5rem;
 			font-weight: normal;
+			line-height: 1;
+			margin: 0;
+			padding: 0;
 		}
 
 	/** NAVIGATION */
@@ -99,9 +117,9 @@ body {
 			-webkit-flex-wrap: wrap;
 			-ms-flex-wrap: wrap;
 			flex-wrap: wrap;
-			-webkit-justify-content: space-around;
-			-ms-flex-pack: space-around;
-			justify-content: space-around;
+			-webkit-justify-content: right;
+			-ms-flex-pack: right;
+			justify-content: right;
 			font-size: 1.2rem;
 			margin: 0 0 1em;
 			padding: 0;
@@ -154,6 +172,20 @@ body {
 
 /** CONTENT */
 	/** HOMEPAGE CONTENT */
+		#content.home {
+			-webkit-flex: 0 1 100%;
+			-ms-flex: 0 1 100%;
+			flex: 0 1 100%;
+		}
+
+		.homepost {
+			border-bottom: 1px solid #ababab;
+			border-left: 1px solid #ababab;
+			border-radius: 10px;
+			border-top-left-radius: 0;
+			border-bottom-right-radius: 0;
+			padding: 0 10px;
+		}
 
 	#content {
 		-webkit-flex: 0 1 70%;
@@ -352,6 +384,7 @@ body {
 	#comments { margin: 3em 0; }
 
 	#comments h3 {
+		list-style-type: none;
 		margin: 0 0 .25em;
 	}
 
@@ -362,7 +395,7 @@ body {
 
 	#comments .commentlist li {
 		font-size: 1.2rem;
-		list-style: none;
+		list-style-type: none;
 		margin: 0 0 1em;
 		padding: .5em;
 	}
