--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ Author URL: https://keithsolomon.net
 	font-family: 'Roboto Mono', monospace;
 */
 
+:root {
+	--white: #ffffffff;
+	--silver-chalice: #abababff;
+	--blue-sapphire: #065a82ff;
+	--xiketic: #1e000eff;
+	--blue-sapphire-2: #0b4f6cff;
+}
+
 body {
 	background: #fff;
 	color: #000;
@@ -53,9 +61,14 @@ body {
 }
 
 /** LINKS */
-	a:link, a:visited, a:active { text-decoration: none; }
+	a:link, a:visited, a:active {
+		color: var(--blue-sapphire);
+		text-decoration: none;
+	}
 
-	a:hover { }
+	a:hover {
+		color: var(--silver-chalice);
+	}
 
 	a.more-link {
 		display: block;
@@ -65,10 +78,10 @@ body {
 /** HEADER */
 	#header {
 		border-bottom: 1px solid #ababab;
-		border-left: 1px solid #ababab;
+		border-right: 1px solid #ababab;
 		border-radius: 10px;
-		border-top-left-radius: 0;
-		border-bottom-right-radius: 0;
+		border-top-right-radius: 0;
+		border-bottom-left-radius: 0;
 		padding: 0 10px 15px;
 		margin: 1em 0 3em;
 		-webkit-flex: 0 1 100%;
@@ -84,8 +97,8 @@ body {
 		}
 
 		#logo h1 a:link, #logo h1 a:visited, #logo h1 a:active {
-			font-family: 'Open Sans', sans-serif;
 			font-size: 2.4rem;
+			font-style: italic;
 			line-height: 1;
 			margin: 0;
 			padding: 0;
@@ -98,6 +111,7 @@ body {
 			color: #ababab;
 			font-family: 'Open Sans', sans-serif;
 			font-size: 1.5rem;
+			font-style: italic;
 			font-weight: normal;
 			line-height: 1;
 			margin: 0;
@@ -120,23 +134,25 @@ body {
 			-webkit-justify-content: right;
 			-ms-flex-pack: right;
 			justify-content: right;
+			float: right;
 			font-size: 1.2rem;
 			margin: 0 0 1em;
 			padding: 0;
+			width: 70vw;
 		}
+
+		#nav li { padding: 0 10px; }
 
 		#nav li a:link, #nav li a:visited, #nav li a:active {
 			align-items: flex-start;
-			color: #007ac9;
-			font-weight: bold;
-			padding: 5px 10px;
+			color: var(--blue-sapphire);
+			font-weight: 600;
 			text-align: center;
 			text-decoration: none;
 		}
 
 		#nav li a:hover, #nav li.current_page_item a, #nav li.current-page-ancestor a {
-			background: #007ac9;
-			color: #fff;
+			color: var(--silver-chalice);
 		}
 
 		/** SUCKERFISH DROPDOWNS */
@@ -178,12 +194,23 @@ body {
 			flex: 0 1 100%;
 		}
 
-		.homepost {
+		.post.homepost {
 			border-bottom: 1px solid #ababab;
 			border-left: 1px solid #ababab;
 			border-radius: 10px;
 			border-top-left-radius: 0;
 			border-bottom-right-radius: 0;
+			margin: 0 0 40px;
+			padding: 0 10px;
+		}
+
+		.post.homepost.even {
+			border-bottom: 1px solid #ababab;
+			border-left: none;
+			border-right: 1px solid #ababab;
+			border-radius: 10px;
+			border-top-right-radius: 0;
+			border-bottom-left-radius: 0;
 			padding: 0 10px;
 		}
 
@@ -202,7 +229,7 @@ body {
 		text-transform: uppercase;
 	}
 
-	.content .post { margin-bottom: 1.5em; }
+	.content .post {  }
 
 	.content .odd { }
 
@@ -285,6 +312,7 @@ body {
 	/** HEADING STYLES */
 		h1, h2, h3, h4, h5, h6 {
 			font-family: 'Kufam', sans-serif;
+			font-style: italic;
 		}
 
 		.content h1 { font-size: 2rem; }
@@ -556,10 +584,10 @@ body {
 
 /** FOOTER */
 	#footer {
-		border-top: 1px solid #333;
-		color: #333;
+		background: var(--xiketic);
+		color: #fff;
 		margin-top: 3em;
-		padding-top: .5em;
+		padding: .5em 2.5%;
 		-webkit-flex: 0 1 100%;
 		-ms-flex: 0 1 100%;
 		flex: 0 1 100%;
