--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,10 +4,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
 	#nav ul {
-		font-size: 1rem;
-		margin: 0 0 1em;
-		padding: 0;
-		width: 63.5vw;
+		width: 28%;
 	}
 }
 
