Update category/tag page template

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
 		width: 100%;
 	}
 
-	.home .navigation {
+	.home .navigation, .category .navigation {
 		border: none;
 		border-radius: 0;
 	}
